优化了一些代码。

--- a/css/chat.css
+++ b/css/chat.css
@@ -23,8 +23,9 @@
   line-height: 1.428571429;
 }
 
-.message i {
+.message p {
   color: #999 !important;
+  line-height: 1.428571429 !important;
 }
 
 .message_c {
