--- a/css/chat.css
+++ b/css/chat.css
@@ -26,6 +26,7 @@
 .message p {
   color: #999 !important;
   line-height: 1.428571429 !important;
+  margin-bottom: 0px !important;
 }
 
 .message_c {
