--- a/css/chat.css
+++ b/css/chat.css
@@ -28,7 +28,7 @@
   margin-bottom: 0px !important;
 }
 
-.message p em {
+.message em {
   color: #999 !important;
   margin-bottom: 0px !important;
   display: block;
