增加了一个对话轮数指示。

--- a/css/chat.css
+++ b/css/chat.css
@@ -114,6 +114,13 @@
   font-weight: bold;
 }
 
+.username .turn {
+  font-weight: 400;
+  color: #bbb;
+  font-size: 12px;
+  margin-left: 4px;
+}
+
 .username-m {
   text-align: right;
 }
